--- a/package.xml
+++ b/package.xml
@@ -12,7 +12,9 @@
   <license>ALv2</license>
   <buildtool_depend>cmake</buildtool_depend>
 
-  <depend>boost</depend>
+  <depend>libboost-chrono-dev</depend>
+  <depend>libboost-system-dev</depend>
+  <depend>libboost-thread-dev</depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
